# wp_face_opencv

./: CMakeLists.txt  README.md  face.cc  face.h  index.js  nodeExports.cc  nodes.cc  nodes.h  package.json  util.cc  util.h
cnn/: facedetectcnn-model.cpp  facedetection_export.h
sample/: demo.js
